fix: :lipstick: stop popup boxes from being covered by iOS notch

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -802,7 +802,7 @@ input[type="search"]::-webkit-search-cancel-button {
 #info-box {
     position: fixed;
     top: calc(48px + env(safe-area-inset-top, 0));
-    left: 20px;
+    left: max(20px, env(safe-area-inset-left, 0));
     box-sizing: border-box;
     width: calc(30vw - 40px);
     min-width: 440px;
@@ -885,7 +885,7 @@ input[type="search"]::-webkit-search-cancel-button {
 #themes-box {
     position: fixed;
     top: calc(48px + env(safe-area-inset-top, 0));
-    right: 20px;
+    right: max(20px, env(safe-area-inset-right, 0));
     box-sizing: border-box;
     width: 360px;
     max-height: calc(100vh - 48px - env(safe-area-inset-top, 0) - env(safe-area-inset-bottom, 0));
